Update Example5.java